crates/rlf-macros/tests/fail/unknown_transform_with_suggestion.rs
use rlf::rlf;

rlf! {
    card = "card";
    bad = "{@thee card}";
}

fn main() {}
