crates/rlf-macros/tests/fail/unknown_transform_with_suggestion.stderr
error: unknown transform '@thee'
       help: did you mean '@the'?
 --> tests/fail/unknown_transform_with_suggestion.rs:5:11
  |
5 |     bad = "{@thee card}";
  |           ^^^^^^^^^^^^^^
